// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostPreview > renders correctly 1`] = `
"<li class="post-preview">
  <!--v-if--><time><span>20 marzo 2024</span></time>
  <div>
    <routerlink to="/post/test-post"></routerlink>
    <div>
      <routerlink to="/tags/test"></routerlink>
      <routerlink to="/tags/vue"></routerlink>
    </div>
    <p>This is a test post summary</p>
    <routerlink to="/post/test-post"></routerlink>
  </div>
</li>"
`;

exports[`PostPreview > renders pinned post correctly 1`] = `
"<li class="post-preview pinned"><span class="badge" title="Questo post è stato messo in evidenza perché potrebbe essere stato aggiornato di recente o per qualche contesto attuale.">in evidenza</span><time><span>20 marzo 2024</span></time>
  <div>
    <routerlink to="/post/test-post"></routerlink>
    <div>
      <routerlink to="/tags/test"></routerlink>
      <routerlink to="/tags/vue"></routerlink>
    </div>
    <p>This is a test post summary</p>
    <routerlink to="/post/test-post"></routerlink>
  </div>
</li>"
`;
